yaml/flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: flask-app
  name: flask-app
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: flask-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/main_network: "true"
        io.kompose.service: flask-app
    spec:
      containers:
        - image: hypnorose/flask_web_app
          name: flask-app
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
