yaml/flask-app-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: flask-app
subsets:
  - addresses:
      - ip: 192.168.0.123
    ports:
      - port: 1234
