yaml/pg-admin-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pg-admin
  name: pg-admin
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 80
  externalIPs:
  - 192.168.0.189
  selector:
    io.kompose.service: pg-admin
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
