yaml/ingr.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.domain
    http:
      paths:
      - backend:
          serviceName: pg-admin
          servicePort: 80
        path: /
