yaml/ingres-flask.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: flask-app
          servicePort: 5000
        path: /
