yaml/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-host
spec: 
  rules: 
    http: 
      paths: 
        - 
          backend: 
            service: 
              name: pg-admin
              port: 
                number: 80
          path: /
          pathType: Prefix
